# Poggesi_mid

./: CMakeLists.txt  base_kmeans.h  dataset.cpp  dataset.h  kmeans_omp.cpp  kmeans_omp.h  kmeans_seq.cpp  kmeans_seq.h  main.cpp  main_test.cpp
data/: N100000_K10.csv  N100000_K100.csv  N100000_K12.csv  N100000_K2.csv  N100000_K20.csv  N100000_K2_circles.csv  N100000_K2_moons.csv  N100000_K4.csv  N100000_K50.csv  N100000_K6.csv  N100000_K8.csv  N10000_K10.csv  N10000_K100.csv  N10000_K12.csv  N10000_K2.csv  N10000_K20.csv  N10000_K2_circles.csv  N10000_K2_moons.csv  N10000_K4.csv  N10000_K50.csv  N10000_K6.csv  N10000_K8.csv  N1000_K10.csv  N1000_K12.csv  N1000_K2.csv  N1000_K6.csv  N1000_K8.csv  N20000_K10.csv  N20000_K12.csv  N20000_K2.csv  N20000_K4.csv  N20000_K6.csv  N20000_K8.csv  N30000_K10.csv  N30000_K12.csv  N30000_K2.csv  N30000_K4.csv  N30000_K6.csv  N30000_K8.csv  N50000_K10.csv  (+10 more)
